# flight-controller

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE  STM32F722XX_FLASH.ld  flight-controller.ioc
App/: CMakeLists.txt
App/Inc/: app_main.h
App/Src/: app_main.c
Config/: CMakeLists.txt  fc_types.h  pin_map.h  task_priorities.h
Core/Inc/: main.h  stm32f7xx_hal_conf.h
Core/Src/: main.c  stm32f7xx_hal_msp.c
Drivers_Custom/: CMakeLists.txt
Drivers_Custom/BMI088/: bmi088.c  bmi088.h
Tasks/: CMakeLists.txt
Tasks/Inc/: task_monitor.h
Tasks/Src/: task_monitor.c
cmake/: freertos.cmake  gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
